# rust

./: .gitignore
counter_ratatui/: Cargo.toml
counter_ratatui/src/: app.rs  event.rs  main.rs  ui.rs
gui/: Cargo.toml
gui_todo/: Cargo.toml
gui_todo/src/: main.rs
hangman-bot/: Cargo.toml
hangman-bot/src/: letters.rs  main.rs
learning-ratatui/: Cargo.toml
learning-ratatui/src/: main.rs
party-games-cli/: Cargo.toml  shell.nix
party-games-cli/src/: hangman.rs  jokes.rs  main.rs  utils.rs
rs-cat/: Cargo.toml
rs-cat/src/: main.rs
rs-echo/: Cargo.toml
rs-echo/src/: main.rs
rs-find/: Cargo.toml
rs-find/src/: main.rs
rs-ls/: Cargo.toml
rs-ls/src/: main.rs
rust_microservice/: Cargo.toml
rust_microservice/src/: main.rs
sorting/bogo_sort/src/: main.rs
sorting/merge_sort/src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs
text-editor/src/: main.rs
todo/: Cargo.toml
todo-cli/: Cargo.toml  db.txt
todo-cli/src/: main.rs
todo/entities/: mod.rs
todo/src/: db.rs  handlers.rs  main.rs
todo/src/entities/: mod.rs
todo_v2/: Cargo.toml
todo_v2/src/: main.rs
