[package]
name = "party-games-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
titlecase = "2.2.1"
reqwest = { version = "0.12.2", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
rand = "0.8.5"
